--- a/templates/paco.html
+++ b/templates/paco.html
@@ -1,5 +1,67 @@
-{% extends 'index2.html' %}
+{% extends 'index.html' %}
 
 {% block body %}
-  <p>hola Paco, saludos </p>
+
+{% with messages = get_flashed_messages() %}
+    {% if messages %}
+      {% for message in messages %}
+        <p>{{ message.decode('utf-8') }}</p>
+      {% endfor %}
+    {% endif %}
+  {% endwith %}
+
+<form action="/paco/agregar" method="post">
+  <fieldset>
+    <legend>Añadir compra</legend>
+
+	<table>
+	<tr>
+    <td width="10"><label for="name">Nombre </label></td>
+    <td width="10"><label for="quantity">Cantidad</label></td>
+	<td width="10"><label for="price">Precio</label></td>
+	<td width="10"><label for="amount">Importe</label></td>
+	<td width="10"><label for="comission">Comisión</label></td>
+	<td width="10"><label for="tax">IVA</label></td>
+	<td width="10"><label for="total">Total</label></td>
+  <td width="10"><label for="operación">Operación</label></td>
+	<td width="10"><label for="poi">% invertido</label></td>
+	<td width="10"><label for="actual_price">Precio Actual</label></td>
+	<td width="10"><label for="profit">% Ganancia</label></td>
+	<td width="10"><label for="price_sold">Precio Vendido</label></td>
+	<td width="10"><label for="sold_amount">Importe de la Venta</label></td>
+	<td width="10"><label for="actual_price">Precio Actual</label></td>
+	<td width="10"><label for="profit_money">Ganacia en Dinero</label></td>
+	</tr>
+	
+	<tr>
+   <td width="10"><input id="name" name="name" type="text"> </td>
+   <td width="10"><input size="5" id="quantity" name="quantity" type="text"></td>
+   <td width="10"><input size="10" id="price" name="price" type="text"></td>
+   <td width="10"><input size="10" id="amount" name="amount" type="text"></td>
+   <td width="10"><input size="10" id="comission" name="comission" type="text"></td>
+   <td width="10"><input size="5" id="tax" name="tax" type="text"></td>
+   <td width="10"><input size="10" id="total" name="total" type="text"></td>
+   <td width="10"><input size="8" id="operacion" name="operacion" type="text"></td>
+   <td width="10"><input size="5" id="poi" name="poi" type="text"></td>
+   <td width="10"><input size="10" id="actual_price" name="actual_price" type="text"></td>
+   <td width="10"><input size="5" id="profit" name="profit" type="text"></td>
+   <td width="10"><input size="10" id="price_sold" name="price_sold" type="text"></td>
+   <td width="10"><input size="10" id="sold_amount" name="sold_amount" type="text"></td>
+   <td width="10"><input size="10" id="actual_price" name="actual_price" type="text"></td>
+   <td width="10"><input size="10" id="profit_money" name="profit_money" type="text"></td>
+   </tr>
+	</table>
+	
+   <!-- <label for="email">Email</label>
+    <input id="email" name="email" type="email">
+-->
+    <button type="submit" name="button">Añadir</button>
+</fieldset>
+</form>
+
+<p>
+  <a href="/Paco">Regresar</a>
+</p>
+
 {% endblock %}
+  
